--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@babel/core": "^7.4.5",
     "@babel/plugin-transform-modules-commonjs": "^7.4.4",
     "@babel/register": "^7.4.4",
-    "live-server": "^1.2.1"
+    "express": "^4.17.1",
+    "live-server": "^1.2.1",
+    "mkdirp": "^0.5.1",
+    "prettier": "^1.17.1",
+    "puppeteer": "^1.17.0"
   }
 }
