--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "author": "Chris Wolfe (https://crlfe.ca)",
   "bin": "./minimal-magic.js",
   "repository": "github:crlfe/minimal-magic",
+  "scripts": {
+    "lint": "eslint lib tools"
+  },
   "private": true,
   "dependencies": {
     "@babel/core": "^7.4.5",
@@ -18,5 +21,11 @@
     "mkdirp": "^0.5.1",
     "prettier": "^1.17.1",
     "puppeteer": "^1.17.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-compat": "^3.1.1",
+    "eslint-plugin-prettier": "^3.1.0"
   }
 }
