--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-compat": "^3.1.1",
+    "eslint-plugin-jsdoc": "^8.0.1",
     "eslint-plugin-prettier": "^3.1.0"
   }
 }
