--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "scripts": {
     "lint": "eslint lib tools"
   },
+  "os": [
+    "linux"
+  ],
   "private": true,
   "dependencies": {
     "@babel/core": "^7.4.5",
