--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "bin": "./minimal-magic.js",
   "repository": "github:crlfe/minimal-magic",
   "scripts": {
-    "lint": "eslint lib tools"
+    "lint-browser": "eslint -c eslint-browser.js docs lib",
+    "lint-builder": "eslint -c eslint-builder.js tools",
+    "lint-types": "tsc"
   },
   "os": [
     "linux"
@@ -26,10 +28,19 @@
     "puppeteer": "^1.17.0"
   },
   "devDependencies": {
+    "@types/entities": "^1.1.1",
+    "@types/express": "^4.17.0",
+    "@types/glob": "^7.1.1",
+    "@types/mkdirp": "^0.5.2",
+    "@types/node": "^12.6.0",
+    "@types/prettier": "^1.16.4",
+    "@types/puppeteer": "^1.12.4",
+    "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-compat": "^3.1.1",
     "eslint-plugin-jsdoc": "^8.0.1",
-    "eslint-plugin-prettier": "^3.1.0"
+    "eslint-plugin-prettier": "^3.1.0",
+    "typescript": "^3.5.2"
   }
 }
