--- a/package.json
+++ b/package.json
@@ -17,30 +17,31 @@
   ],
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
+    "@babel/core": "^7.5.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
     "@babel/register": "^7.4.4",
     "entities": "^1.1.2",
     "express": "^4.17.1",
     "live-server": "^1.2.1",
+    "lodash": "^4.17.14",
     "mkdirp": "^0.5.1",
-    "prettier": "^1.17.1",
-    "puppeteer": "^1.17.0"
+    "prettier": "^1.18.2",
+    "puppeteer": "^1.18.1"
   },
   "devDependencies": {
     "@types/entities": "^1.1.1",
     "@types/express": "^4.17.0",
     "@types/glob": "^7.1.1",
     "@types/mkdirp": "^0.5.2",
-    "@types/node": "^12.6.0",
+    "@types/node": "^12.6.2",
     "@types/prettier": "^1.16.4",
     "@types/puppeteer": "^1.12.4",
     "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-compat": "^3.1.1",
-    "eslint-plugin-jsdoc": "^8.0.1",
+    "eslint-plugin-compat": "^3.2.0",
+    "eslint-plugin-jsdoc": "^8.7.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.3"
   }
 }
